# FAKE-REWARDS

./: CMakeLists.txt  Mod.json  README.md
.github/Workflows/: build.yml
.github/workflows/: main.yml
src/: main.cpp
